--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -44,8 +44,20 @@ header{
     position: absolute;
     left: calc(50% - 15rem);
     margin-top: 4rem;
-    border-radius: 50% 0 0 0 ;
+    border-radius:  12rem 0 12rem 0 ;
+  
 }
 img{
     border-radius: 12rem 0 12rem 0;
+    
+    
+}
+/*=================== scroll down ========================= */
+.scroll_down{
+    position:absolute;
+    right: -2.3rem;
+    bottom: 5rem;
+    transform:rotate(90deg);
+    font-weight: 200;
+    font-size: 9rem;
 }
